# C2035_Practical_1

./: CMakeLists.txt
csc2035-assignment1-r01/: job.c
